--- a/app/shell.html
+++ b/app/shell.html
@@ -5,7 +5,7 @@
       <li class="name">
         <h1>
           <a href="#">
-            Splendor
+            Beer Bonder
           </a>
         </h1>
       </li>
@@ -17,7 +17,7 @@
       <ul class="right">
         <li class="divider"></li>
         <li class="has-dropdown not-click">
-          <a>Games</a>
+          <a>Bonds</a>
           <ul class="dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link show-for-small"><a class="parent-link js-generated" href="#">Main Item 1</a></li>
             <li class="has-dropdown not-click">
               <a href="#" class="">New</a>
@@ -58,7 +58,7 @@
         </li>
         <li class="divider"></li>
         <li class="has-dropdown not-click">
-          <a href="#instruments">Players</a>
+          <a href="#instruments">Beers</a>
           <ul class="dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link show-for-small"><a class="parent-link js-generated" href="#">Main Item 2</a></li>
             <li><a href="#">Leaderboards</a></li>
             <li><a href="#/instruments">View All</a></li>
