Added login page and route

--- a/app/shell.html
+++ b/app/shell.html
@@ -67,11 +67,11 @@
         </li>
         <li class="divider"></li>
         <li class="">
-          <a href="#" data-bind="click: login, visible: !signedIn">Login</a>
+          <a href="#/authentication/login">Login</a>
         </li>
         <li class="divider"></li>
         <li class="">
-          <a href="#" data-bind="click: signUp, visible: !signedIn">Sign Up</a>
+          <a href="#/authentication/new">Sign Up</a>
         </li>
       </ul>
     </section>
