--- a/app/shell.html
+++ b/app/shell.html
@@ -19,50 +19,20 @@
 				<li class="has-dropdown not-click">
 					<a>Bonds</a>
 					<ul class="dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link show-for-small"><a class="parent-link js-generated" href="#">Main Item 1</a></li>
-						<li class="has-dropdown not-click">
+						<li class="">
 							<a href="#" class="">New</a>
-							<ul class="dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link show-for-small"><a class="parent-link js-generated" href="#">New Public Game</a></li>
-								<li><label>Public</label></li>
-								<li><a href="#">2 Player Game</a></li>
-								<li><a href="#">3 Player Game</a></li>
-								<li><a href="#">4 Player Game</a></li>
-								<li><label>Private</label></li>
-								<li><a href="#">2 Player Game</a></li>
-								<li><a href="#">3 Player Game</a></li>
-								<li><a href="#">4 Player Game</a></li>
-							</ul>
 						</li>
-						<li class="has-dropdown not-click">
-							<a href="#" class="">Find</a>
-							<ul class="dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link show-for-small"><a class="parent-link js-generated" href="#">New Public Game</a></li>
-								<li><a href="#">2 Player Game</a></li>
-								<li><a href="#">3 Player Game</a></li>
-								<li><a href="#">4 Player Game</a></li>
-							</ul>
+						<li class="">
+							<a href="#" class="">Search</a>
 						</li>
-						<li class="has-dropdown not-click">
-							<a href="#" class="">Continue</a>
-							<ul class="dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link show-for-small"><a class="parent-link js-generated" href="#">New Public Game</a></li>
-								<li><a href="#">Example 1</a></li>
-								<li><a href="#">Example 2</a></li>
-								<li><a href="#">Example 3</a></li>
-							</ul>
-						</li>
-						<li class="divider"></li>
-						<li><label>Misc</label></li>
-						<li><a href="#">Instructions</a></li>
-						<li><a href="#">About</a></li>
-						<li class="divider"></li>
-						<li><a href="#">Buy Splendor</a></li>
 					</ul>
 				</li>
 				<li class="divider"></li>
 				<li class="has-dropdown not-click">
 					<a href="#instruments">Beers</a>
 					<ul class="dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link show-for-small"><a class="parent-link js-generated" href="#">Main Item 2</a></li>
-						<li><a href="#">Leaderboards</a></li>
-						<li><a href="#/instruments">View All</a></li>
-						<li><a href="#/instruments/new">Find Player</a></li>
+						<li><a href="#">All</a></li>
+						<li><a href="#/instruments">Search</a></li>
 					</ul>
 				</li>
 				<li class="divider"></li>
