Added gulpfile to compile sass

--- a/app/shell.html
+++ b/app/shell.html
@@ -3,7 +3,7 @@
 		<ul class="title-area">
 			<!-- Title Area -->
 			<li class="name">
-				<h1>
+				<h1 class='raleway'>
 					<a href="#">
 						Beer Bonder
 					</a>
