--- a/app/shell.html
+++ b/app/shell.html
@@ -32,7 +32,7 @@
 					<li class="has-dropdown not-click">
 						<a href="#instruments">Beers</a>
 						<ul class="dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link show-for-small"><a class="parent-link js-generated" href="#">Main Item 2</a></li>
-							<li><a href="#">All</a></li>
+							<li><a href="#/beers/all">All</a></li>
 							<li><a href="#/instruments">Search</a></li>
 						</ul>
 					</li>
